# goit-web-hw-13

./: .gitignore
part1/: auth.py  auth_routes.py  contacts.py  email_.py  main.py  models.py  my_routes.py  pyproject.toml  users.py  users_routes.py
part2/: pyproject.toml
part2/hw_project/hw_project/: 1.py  settings.py
part2/hw_project/users/: forms.py  views.py
part2/hw_project/users/templates/users/: login.html  password_reset_complete.html
